@@ -1,4 +1,4 @@
-__version__ = '0.1.3-dev'
+__version__ = '0.2.0'
 
 from yam.main import run
-from yam.commands import read_stretch
+from yam.commands import read_dicts
